#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(sun, 0.1, post@steffenvogel.de)
AC_CONFIG_SRCDIR([src/sun_main.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Automake
AM_INIT_AUTOMAKE
AM_PROG_CC_C_O

AC_CONFIG_FILES([
  Makefile
  src/Makefile
])

AC_OUTPUT
